Fix Add gap:15px container buttons tablet screen
J'ai ajoute un gap de 15px a la classe filtres__boutons qui gere le
conteneur des boutons. on a avait auparavant reussi a fixer la taille
maximum de ce conteneur mais tous nos boutons etaient tous colles les
uns aux autres car on avait par la suite supprime les margins. on va
maintenant corriger ce prb en ajoutant ce gap de 15px car c'est l'espace
indique sur la maquette. A present, nos boutons sont tjrs sur 1 meme
ligne qqe soit la taille de l'ecran en tablette, ils sont espaces
correctement et leur contenu est sur une seule ligne.

--- a/css/sections/recherches-and-filtres.css
+++ b/css/sections/recherches-and-filtres.css
@@ -189,6 +189,7 @@
     display: flex;
     justify-content: space-between;
     max-width: 668px;
+    gap: 15px;
   }
 
   .filtres__boutonsItem {
